deploy: a5fedc66236999a2d9b50fb4d52cd5b299b13844

--- a/development/workspace/index.html
+++ b/development/workspace/index.html
@@ -1196,7 +1196,7 @@ cd aichallenge-2024
 ./build_autoware.bash
 </code></pre>
 <p>Autowareのビルド後、以下のコマンドを実行します。</p>
-<pre><code class="language-bash">./run_autoware.sh
+<pre><code class="language-bash">./run_autoware.bash
 </code></pre>
 <p>下記の様な画面が表示されたら起動完了です。終了するにはターミナル上でCTRL + Cを入力します。
 <img alt="autoware" src="../images/installation/autoware.png" /></p>
