deploy: 89201eb8803ec392e266cb1ac98ca53b63f4f8d3

--- a/development/installation/index.html
+++ b/development/installation/index.html
@@ -1159,7 +1159,7 @@ git clone https://github.com/AutomotiveAIChallenge/aichallenge-2024.git
 <h2 id="awsim">AWSIMのダウンロード</h2>
 <ol>
 <li>
-<p><a href="https://drive.google.com/drive/">Google Drive(あとでリンク変える)</a> から最新の <code>AWSIM_GPU.zip</code> をダウンロードし、<code>aichallenge-2024/aichallenge/simulator</code> に展開します。</p>
+<p><a href="https://drive.google.com/drive/folders/1ftIoamNGAet90sXeG48lKa89dkpVy45y">Google Drive</a> から最新の <code>AWSIM.zip</code> をダウンロードし、<code>aichallenge-2024/aichallenge/simulator</code> に展開します。</p>
 </li>
 <li>
 <p>パーミッションを図のように変更します。</p>
