--- a/getting-started/index.html
+++ b/getting-started/index.html
@@ -1136,7 +1136,10 @@
 <li>SSD: 60GB以上</li>
 </ul>
 <p>Windows環境しかお持ちでない方は、Ubuntu22.04のインストールをお願いいたします。Windows環境と同じディスクにUbuntu環境を入れることもできますが、不慣れな場合Windows環境を破壊してしまう可能性があるため、新しく外付けまたは内蔵SSDを購入したうえでそちらへのインストールをすることを強くお勧めします。</p>
+<div class="admonition info">
+<p class="admonition-title">Info</p>
 <p>Ubuntuのインストール方法については<a href="https://qiita.com/kiwsdiv/items/1fa6cf451225492b33d8">こちらの記事</a>が参考になります。</p>
+</div>
 <h2 id="ai">AIチャレンジの環境構築</h2>
 <p><code>Alt+Ctrl+T</code>でターミナルを立ち上げてから、以下に従ってコマンドを実行します。</p>
 <p><a href="../development/installation/">環境構築の説明ページ</a></p>
