--- a/development/visible-simulation/index.html
+++ b/development/visible-simulation/index.html
@@ -1184,20 +1184,19 @@ sudo docker run --rm --runtime=nvidia --gpus all nvidia/cuda:11.6.2-base-ubuntu2
 # +-----------------------------------------------------------------------------+
 </code></pre>
 <h2 id="awsim">AWSIMのダウンロード・起動確認</h2>
-<div class="admonition info">
-<p class="admonition-title">Info</p>
-<p>AWSIM は現在準備中です。</p>
-</div>
 <ol>
 <li>
-<p><a href="https://drive.google.com/drive/">Google Drive</a> から最新の <code>AWSIM_GPU.zip</code> をダウンロードし、<code>aichallenge-2024/aichallenge/simulator</code> に展開します。</p>
+<p><a href="https://drive.google.com/drive/folders/1ftIoamNGAet90sXeG48lKa89dkpVy45y">Google Drive</a> から最新の <code>AWSIM_GPU_**.zip</code> をダウンロードし、<code>aichallenge-2024/aichallenge/simulator</code> に展開します。</p>
 </li>
 <li>
 <p>パーミッションを図のように変更します。</p>
 </li>
 </ol>
 <p><img alt="パーミッション変更の様子" src="../images/installation/permmision.png" /></p>
-<p>実行ファイルが<code>aichallenge-2024/aichallenge/simulator/AWSIM_GPU/AWSIM.x86_64</code>に存在していることを確認してください。</p>
+<div class="admonition info">
+<p class="admonition-title">Info</p>
+<p>実行ファイルが<code>aichallenge-2024/aichallenge/simulator/AWSIM_GPU_**/AWSIM.x86_64</code>に存在していることを確認してください。</p>
+</div>
 <h2 id="docker">Dockerコンテナの起動</h2>
 <p>描画有りのシミュレーション推奨環境を満たしており、
 NVIDIA関連のinstallが済んでいる方は上記のコマンドではなく、以下のコマンドでコンテナを起動してください。</p>
@@ -1217,7 +1216,6 @@ source /aichallenge/workspace/install/setup.bash
 sudo ip link set multicast on lo
 /aichallenge/simulator/AWSIM_GPU/AWSIM.x86_64
 </code></pre>
-<p>※実行ファイルが<code>aichallenge-2024/aichallenge/simulator/AWSIM_GPU/AWSIM.x86_64</code>に存在していることを確認してください。</p>
 <p>以下のコマンドを実行します。</p>
 <pre><code class="language-bash">./run_evaluation.bash
 </code></pre>
