--- a/course/velocity_planning/index.html
+++ b/course/velocity_planning/index.html
@@ -1258,7 +1258,7 @@ twist:
 <pre><code class="language-bash">ros2 bag record -o velocity.bag /localization/kinematic_state
 </code></pre>
 <p>PlotJugglerは以下のコマンドで、インストールすることができます。</p>
-<pre><code class="language-bash">sudo apt install ros-humble plotjuggler-ros
+<pre><code class="language-bash">sudo apt install ros-humble-plotjuggler-ros
 </code></pre>
 <p>そして以下のコマンドでPlotJugglerを起動します。</p>
 <pre><code class="language-bash">ros2 run plotjuggler plotjuggler
