deploy: 9d026abe1c878ab3bd39c7b41b3a5336f6a609d6

--- a/course/perception/index.html
+++ b/course/perception/index.html
@@ -1099,23 +1099,17 @@
 <li>高精度な3D点群データを生成し、周囲の環境を詳細に把握できます。</li>
 </ul>
 </li>
-<li>
-<p><strong>カメラ</strong>:</p>
-<ul>
+<li><strong>カメラ</strong>:<ul>
 <li>光学センサーを使用して画像を取得します。</li>
 <li>画像を用いて物体認識、車線検出、交通標識認識などを行います。</li>
 </ul>
 </li>
-<li>
-<p><strong>レーダー（Radio Detection and Ranging）</strong>:</p>
-<ul>
+<li><strong>レーダー（Radio Detection and Ranging）</strong>:<ul>
 <li>電波を発射し、反射して戻ってくるまでの時間を測定します。</li>
 <li>長距離の障害物検出に優れ、悪天候でも安定した性能を発揮します。</li>
 </ul>
 </li>
-<li>
-<p><strong>超音波センサー</strong>:</p>
-<ul>
+<li><strong>超音波センサー</strong>:<ul>
 <li>超音波を発射し、反射して戻ってくるまでの時間を測定します。</li>
 <li>近距離の障害物検出に適しており、駐車支援システムなどに利用されます。</li>
 </ul>
