deploy: e9a9052b6d19721e2c95246e7af7e299fa922b1a

--- a/en/faq.html
+++ b/en/faq.html
@@ -1531,7 +1531,7 @@ However, currently, Autoware does not function unless it receives objects in the
 If using a high-performance GPU is difficult, setting the time scale to around 0.5 with the slider at the bottom of the AWSIM screen may stabilize the operation.</p>
 <hr />
 <h4 id="i-want-to-tune-the-mpc-but-are-the-model-parameters-lag-and-time-constants-used-in-awsim-disclosed"><u>I want to tune the mpc, but are the model parameters (lag and time constants) used in AWSIM disclosed?</u></h4>
-<p>The lag and time constants are not measured or disclosed, but the basic specifications are available <a href="https://automotiveaichallenge.github.io/aichallenge-documentation-2024/specifications/simulator/">here</a>.</p>
+<p>The lag and time constants are not measured or disclosed, but the basic specifications are available <a href="specifications/simulator.html">here</a>.</p>
 <hr />
 <h2 id="general-competition">General Competition</h2>
 <h3 id="is-it-possible-to-add-additional-sensors"><u>Is it possible to add additional sensors?</u></h3>
