--- a/faq.html
+++ b/faq.html
@@ -1535,7 +1535,7 @@ Autowareの基本構成などを本サイトの別タブや<a href="https://auto
 高性能GPUの利用が難しい場合は、awsimの画面の下部にスライドバーでtime scaleを0.5くらいに設定すると安定して動作する可能性があります。</p>
 <hr />
 <h4 id="mpcawsim"><u>mpcのチューニングをしたいのですが，今回AWSIMで使用されているモデルパラメータ（遅れや時定数など）は公開されていないでしょうか．</u></h4>
-<p>遅れや時定数については計測も公開もされていませんが、基本的な仕様については<a href="https://automotiveaichallenge.github.io/aichallenge-documentation-2024/specifications/simulator/">こちら</a>に公開されています。</p>
+<p>遅れや時定数については計測も公開もされていませんが、基本的な仕様については<a href="specifications/simulator.html">こちら</a>に公開されています。</p>
 <hr />
 <hr />
 <h2 id="_5">大会全般</h2>
