--- a/getting-started.html
+++ b/getting-started.html
@@ -1270,7 +1270,7 @@
 <p>このページではAIチャレンジでの一連の流れを記載します。</p>
 <h2 id="_2">オンライン採点環境へのアクセスと提出</h2>
 <p>本大会では、オンライン環境に提出ファイル（ソースコードの圧縮ファイル）をアップロードすることで自動採点が行われ、順位が決定されます。オンライン採点環境にはこちら（準備中）からアクセスしてください。</p>
-<p>自動運転AIチャレンジへの参加申込みは<a href="https://docs.google.com/forms/d/e/1FAIpQLSc0xFCrNS_J5Bl2g2RIZ694B5p9vOhlav9hrwgumtBrQuQ0RQ/viewform">こちら</a>からお願いします。</p>
+<p>自動運転AIチャレンジへの参加申込みがまだ済んでいない方は<a href="https://docs.google.com/forms/d/e/1FAIpQLSc0xFCrNS_J5Bl2g2RIZ694B5p9vOhlav9hrwgumtBrQuQ0RQ/viewform">こちら</a>から登録お願いします。</p>
 <p>申込みを完了し、ユーザー登録がまだ済んでいない方はSlackでの案内に従って登録お願いします。</p>
 <p>アクセスが出来たら、一度ソースコードの提出をしてみましょう。
 <a href="https://drive.google.com/file/d/19LU70cgeg48R6stEXjvwDp1pTT25OjeN">GoogleDrive</a>からサンプルコードの圧縮ファイルをダウンロードして、オンライン採点環境の「UPLOAD」ボタンからそのままアップロードすることで提出ができます。</p>
