--- a/getting-started.html
+++ b/getting-started.html
@@ -1354,7 +1354,7 @@
 <h1 id="_1">はじめ方</h1>
 <p>このページではAIチャレンジでの一連の流れを記載します。</p>
 <h2 id="_2">オンライン採点環境へのアクセスと提出</h2>
-<p>本大会では、オンライン環境に提出ファイル（ソースコードの圧縮ファイル）をアップロードすることで自動採点が行われ、順位が決定されます。オンライン採点環境にはこちら（準備中）からアクセスしてください。</p>
+<p>本大会では、オンライン環境に提出ファイル（ソースコードの圧縮ファイル）をアップロードすることで自動採点が行われ、順位が決定されます。オンライン採点環境には<a href="https://aichallenge-board.jsae.or.jp/live">こちら</a>からアクセスしてください。</p>
 <p>次の3ステップでまずはオンライン採点環境を使ってみましょう！</p>
 <ol>
 <li>
@@ -1398,7 +1398,7 @@
 <p>※AIチャレンジで開発する上でベースとなるソースコードは<a href="https://github.com/AutomotiveAIChallenge/aichallenge-2024/tree/main/aichallenge/workspace/src/aichallenge_submit">大会用リポジトリ</a>内に提供されています。参加者の皆様にはこちらのコードやパラメータをカスタマイズすることで開発を進めていただきますが、Autowareに不慣れな方はまずは<a href="course/index.html">入門講座</a>を一通りやっていただくことをお勧めします。</p>
 <p>※リポジトリ内のコードを使わず独自に開発する方など、各種仕様について知りたい方は<a href="specifications/interface.html">インターフェース仕様</a>、<a href="specifications/simulator.html">シミュレータ仕様</a>のページを参照してください。</p>
 <h2 id="_5">ソースコードの提出</h2>
-<p>完成したコードの提出はオンライン採点環境(準備中)から行います。提出は以下の手順で行ってください。</p>
+<p>完成したコードの提出は<a href="https://aichallenge-board.jsae.or.jp/live">オンライン採点環境</a>から行います。提出は以下の手順で行ってください。</p>
 <ol>
 <li>ソースコードの圧縮</li>
 <li>ローカル評価環境での動作確認</li>
