deploy: 3fa4689795ec33322fcc9767313c1ade39bcfb5d

--- a/preliminaries/submission.html
+++ b/preliminaries/submission.html
@@ -1306,7 +1306,7 @@
 <li>
 <p>オンライン環境にアップロード</p>
 <p><img src="./images/siteImage.png" width="100%"></p>
-<p>[オンライン環境]<!--(https://aichallenge-board.jsae.or.jp/)-->にアクセスし、緑色の「UPLOAD」ボタンから<code>aichallenge_submit.tar.gz</code>をアップロードしてください。アップロード後、ソースコードのビルドとシミュレーションが順に実施されます。</p>
+<p><a href="https://aichallenge-board.jsae.or.jp/live">オンライン環境</a>にアクセスし、緑色の「UPLOAD」ボタンから<code>aichallenge_submit.tar.gz</code>をアップロードしてください。アップロード後、ソースコードのビルドとシミュレーションが順に実施されます。</p>
 <ul>
 <li>正常に終了した場合、採点完了と表示され、<code>result.json</code>がダウンロードでき、各ラップタイムが表示されます。</li>
 <li>シナリオ実行後、launchに失敗した等でスコアが出力されていない場合は「結果無し」と表示されます。この場合、サーバーサイドでの内部エラーの可能性があるため、再アップロードをお願いします。問題が続く場合はお問い合わせください。</li>
