--- a/preliminaries/submission.html
+++ b/preliminaries/submission.html
@@ -1305,10 +1305,10 @@
 </li>
 <li>
 <p>オンライン環境にアップロード</p>
-<p><a href="https://aichallenge-board.jsae.or.jp/live">オンライン環境</a>にアクセスし、右上"LOG IN"ボタンからログインします。
-<img alt="alt text" src="image.png" /></p>
+<p><a href="https://aichallenge-board.jsae.or.jp/live">オンライン環境</a>にアクセスし、右上<a href="https://aichallenge-board.jsae.or.jp/auth/login">「LOG IN」</a>ボタンからログインします。
+<img src="./images/siteImage1.png" width="100%"></p>
 <p>ログインが完了したら緑色の「UPLOAD」ボタンから<code>aichallenge_submit.tar.gz</code>をアップロードしてください。アップロード後、ソースコードのビルドとシミュレーションが順に実施されます。
-<img src="./images/siteImage.png" width="100%"></p>
+<img src="./images/siteImage2.png" width="100%"></p>
 <ul>
 <li>正常に終了した場合、採点完了と表示され、<code>result.json</code>がダウンロードでき、各ラップタイムが表示されます。</li>
 <li>シナリオ実行後、launchに失敗した等でスコアが出力されていない場合は「結果無し」と表示されます。この場合、サーバーサイドでの内部エラーの可能性があるため、再アップロードをお願いします。問題が続く場合はお問い合わせください。</li>
