deploy: ad0d219276ebe88dbdaeb44fcd88e621ca2ec050

--- a/course/index.html
+++ b/course/index.html
@@ -1312,7 +1312,7 @@
 各講座のページにはメニューから移動してください。</p>
 <h2 id="_2">環境構築</h2>
 <p>まず､ Autoware の動作に必要な ROS 2 をインストールします｡
-<a href="https://docs.ros.org/en/humble/Installation/Ubuntu-Install-Debians.html">ROS 2 Documentation</a> の手順にしたがってインストールしてください｡</p>
+<a href="https://docs.ros.org/en/humble/Installation/Ubuntu-Install-Debians.html">ROS 2 Documentation</a> の手順にしたがってEnvironment setupまでを完了させてください｡</p>
 <p>つづけて､いくつかの開発支援ツールセットもインストールします｡</p>
 <pre><code class="language-bash"># Install rosdep
 sudo apt install python3-rosdep
