deploy: 95465b6f700f5b30ab30fe54da3bd32f86e33a57

--- a/getting-started.html
+++ b/getting-started.html
@@ -1544,7 +1544,7 @@
 <p>AIチャレンジではオープンソースソフトウェアを駆使しています。運営から提供されるコードとウェブプラットフォームを利用することで、初期開発フェーズをスキップし、競技のテーマに合わせた開発をすぐに開始できます。
 このアプローチには、「車輪の再発明」を避けることができるという大きな利点があります。さらに、誰でも気軽に大会に参加でき、一貫した評価基準で大会を運営できるというメリットもあります。</p>
 <p>初めて参加される方々は、先人たちが築き上げた基盤の上に立ち、自動運転に必要な機能がほとんど揃っている状態からスタートします。これからは、コミュニティによる「取り組みの公開」を通じて、競技領域での独自の開発を深めるチャンスです。
-さらに、自動運転の理解を深めるために、運営が用意した「<a href="course/index.html">Autoware Practice</a>」と「<a href="https://docs.ros.org/en/humble/Tutorials.html">ROS 2</a>」の学習プログラムを活用することをお勧めします。</p>
+さらに、自動運転の理解を深めるために、運営が用意した「<a href="course/index.html">Autoware Practice</a>」やROS 2のコミュニティが提供する「<a href="https://docs.ros.org/en/humble/Tutorials.html">ROS 2</a>」の学習プログラムを活用することをお勧めします。</p>
 <p>既にチャレンジに参加された方々には、ご自身の経験を公開し、コミュニティに貢献して大会の発展に寄与していただければと思います。皆さんの積極的な参加が、大会をさらに充実させることに繋がります。</p>
 <h2 id="ai_1">AIチャレンジの環境構築</h2>
 <p><code>Alt+Ctrl+T</code>でターミナルを立ち上げてから、以下に従ってコマンド<code>Ctrl+Shift+P</code>で貼り付けた後に<code>Enter</code>で実行します。</p>
