deploy: 11b7a75567b8b2c1d84c0feff23dbcf1c8d8c7a1

--- a/specifications/simulator.html
+++ b/specifications/simulator.html
@@ -1632,8 +1632,15 @@
 <td>true</td>
 <td>ピットストップ関連の機能の有効/無効を設定します。</td>
 </tr>
+<tr>
+<td>--replay0</td>
+<td>string</td>
+<td></td>
+<td>以前の走行ログを読み込み別車両として再生します。</td>
+</tr>
 </tbody>
 </table>
+<p>リプレイのログには <code>result-details.json</code> を使用します。また、リプレイは <code>--replay0</code> から <code>--replay9</code> まで10台の車両に対応しています。</p>
 <h2 id="_4">キーボード操作</h2>
 <table>
 <thead>
