--- a/en/specifications/simulator.html
+++ b/en/specifications/simulator.html
@@ -1632,8 +1632,15 @@
 <td>true</td>
 <td>Enable/disable features related to pit-stop.</td>
 </tr>
+<tr>
+<td>--replay0</td>
+<td>string</td>
+<td></td>
+<td>Load driving logs and replay as a different vehicle.</td>
+</tr>
 </tbody>
 </table>
+<p>Use <code>result-details.json</code> for the driving log for replay. Also, replay supports 10 vehicles from <code>--replay0</code> to <code>--replay9</code>.</p>
 <h2 id="keyboard-operation">Keyboard Operation</h2>
 <table>
 <thead>
