deploy: 710d1960179da229c40f24eac139d7095bdd292e

--- a/en/index.html
+++ b/en/index.html
@@ -1567,6 +1567,7 @@
 <h2 id="vehicle">Vehicle</h2>
 <p><img alt="TOM'S Racing Kart" src="../assets/racing-kart.jpeg" /></p>
 <h2 id="challenges">Challenges</h2>
+<p>The racing kart will drive around a circuit course and compete for the time it takes to complete a set number of laps. Although the cars will be driving alone this time, in the future they will be driving together with others. Therefore, there is a challenge to avoid virtual objects placed on the course.</p>
 
 
 
