--- a/index.html
+++ b/index.html
@@ -1568,6 +1568,7 @@
 <h2 id="_10">使用車両</h2>
 <p><img alt="TOM'S Racing Kart" src="assets/racing-kart.jpeg" /></p>
 <h2 id="_11">挑戦課題</h2>
+<p>サーキットコースを走行し、規定の周回数に到達するまでの走行時間を競います。また、今回は単独での走行になりますが、将来的には他の車両と同時に走ることを想定し、コース上に設置された仮想的な障害物の回避にも挑戦していただきます。</p>
 
 
 
