deploy: afcb545efb7a4bae24be2228a6bdf134e65cb33a

--- a/en/information/rules.html
+++ b/en/information/rules.html
@@ -1576,9 +1576,11 @@ In the final competition, if the vehicle cannot continue driving for some reason
 <p>The ranking will be determined based on the following criteria:</p>
 <ul>
 <li>If the specified number of laps is completed, the team with the shortest driving time.</li>
-<li>If the specified number of laps is not completed:</li>
+<li>If the specified number of laps is not completed:<ul>
 <li>The team with the most laps.</li>
 <li>If the lap count is the same, the team with the shortest time to the last lap.</li>
+</ul>
+</li>
 </ul>
 <h2 id="pit-stop">Pit Stop</h2>
 <p>Vehicles have a virtual value called "Condition," which, when increased, restricts their speed. Condition increases as the vehicle drives and also when it collides with virtual obstacles described below. The Condition can be reset to its initial value by stopping in the Pit Stop Area for a specified number of seconds.</p>
