--- a/information/rules.html
+++ b/information/rules.html
@@ -1576,9 +1576,11 @@
 <p>順位は以下の基準に従って決定します。</p>
 <ul>
 <li>規定の周回数に到達している場合、走行時間の短いチーム。</li>
-<li>規定の周回数に到達していない場合、</li>
+<li>規定の周回数に到達していない場合、<ul>
 <li>周回数が多いチーム。</li>
 <li>周回数が同じ場合、最終周までの走行時間が短いチーム。</li>
+</ul>
+</li>
 </ul>
 <h2 id="_9">ピットストップ</h2>
 <p>車両にはコンディションと呼ばれる仮想的な値が設定されており、この値が増加すると速度に制限が掛かります。コンディションは車両が走行すると増加するほか、後述する仮想的な障害物に衝突した場合も増加します。コンディションはピットストップエリアに規定の秒数停止することで初期値にリセットすることができます。</p>
