deploy: ed1bc40aeea801bbd41848511ae9b9116c5ae3ba

--- a/en/specifications/hardware.html
+++ b/en/specifications/hardware.html
@@ -1257,6 +1257,36 @@
 
 
 <h1 id="hardware">Hardware</h1>
+<table>
+<thead>
+<tr>
+<th>Item</th>
+<th>Model</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>CPU</td>
+<td>Intel Core i9-11900H</td>
+</tr>
+<tr>
+<td>Mem</td>
+<td>16 GB</td>
+</tr>
+<tr>
+<td>SSD</td>
+<td>512 GB</td>
+</tr>
+<tr>
+<td>GNSS</td>
+<td>u-blox ZED-F9R</td>
+</tr>
+<tr>
+<td>IMU</td>
+<td>ICM-20948</td>
+</tr>
+</tbody>
+</table>
 
 
 
